# mimir

./: .clippy.toml  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PROJECT_STATUS.md  README.md  SECURITY.md  keyset.example.json  rustfmt.toml
.github/workflows/: rust.yml
bindings/nodejs/: Cargo.toml
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/mimir/: Cargo.toml  build.rs
crates/mimir-cli/: Cargo.toml
crates/mimir-cli/src/: main.rs
crates/mimir-compression/: Cargo.toml
crates/mimir-compression/src/: lib.rs
crates/mimir-core/: Cargo.toml
crates/mimir-core/benches/: memory_operations.rs
crates/mimir-core/src/: config.rs  crypto.rs  error.rs  lib.rs  test_utils.rs  types.rs
crates/mimir-core/tests/: encryption.rs
crates/mimir-db/: Cargo.toml  non_existent_keyset.json
crates/mimir-db/src/: lib.rs
crates/mimir-guardrails/: Cargo.toml
crates/mimir-guardrails/src/: lib.rs
crates/mimir-llm/: Cargo.toml  README.md
crates/mimir-llm/examples/: gemma_integration.rs  memory_processing.rs  mistralrs_integration.rs  model_swapping.rs  relevance_test.rs  sample_integration.rs  search_summarization.rs  vision_example.rs
crates/mimir-llm/src/: config.rs  error.rs  gemma.rs  lib.rs  mistralrs_service.rs  prompts.rs
crates/mimir-sdk/: Cargo.toml
crates/mimir-sdk/src/: lib.rs
crates/mimir-tray/: Cargo.toml  tauri.conf.json
crates/mimir-tray/icons/: placeholder.txt
crates/mimir-tray/src/: config_manager.rs  lib.rs  main.rs  memory_client.rs  service_manager.rs  ui.rs
crates/mimir-vector/: Cargo.toml
crates/mimir-vector/benches/: vector_operations.rs
crates/mimir-vector/src/: batch_ops.rs  embedder.rs  error.rs  hnsw_store.rs  lib.rs  memory_manager.rs  persistence.rs  rotation.rs  thread_safe_store.rs
crates/mimir/src/: lib.rs  llm_service.rs  main.rs  mcp.rs  model.rs  server.rs  storage.rs  vault.rs
crates/mimir/tests/: integration_tests.rs
crates/safe-memoryd/: Cargo.toml
crates/safe-memoryd/src/: main.rs  mcp.rs  server.rs
docs/: BUILD_MODEL.md  Gemma3-Setup.md  MEMORY_INGESTION_PIPELINE.md  ROADMAP.md  SYSTEM_TRAY_DESIGN.md
examples/: basic_usage.rs
scripts/: Cargo.toml  convert_gguf_to_safetensors.py
scripts/src/: calculate_checksums.rs  test_build.rs
