[package]
name = "mimir-scripts"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mimir-core = { path = "../crates/mimir-core" }
hex = "0.4"
