[package]
name = "mimir-scripts"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "calculate_checksums"
path = "src/calculate_checksums.rs"

[[bin]]
name = "test_build"
path = "src/test_build.rs"

[dependencies]
mimir-core = { path = "../crates/mimir-core" }
hex = "0.4"
sha2 = "0.10"
