[package]
name = "mimir-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python bindings for Mimir AI Memory Vault"

[lib]
name = "mimir"
crate-type = ["cdylib"]

[dependencies]
mimir-core = { path = "../../crates/mimir-core" }
mimir-sdk = { path = "../../crates/mimir-sdk" }

pyo3 = { version = "0.20", features = ["extension-module"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[build-dependencies]
pyo3-build-config = "0.20"

[dev-dependencies]
maturin = "1.4" 