[package]
name = "mimir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Mimir AI Memory Vault"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
tempfile.workspace = true 