[package]
name = "mimir-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Mimir AI Memory Vault"

[[bin]]
name = "mimir-cli"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
mimir-db = { path = "../mimir-db" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
tempfile.workspace = true 
