[package]
name = "mimir-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Memory compression and summarization for Mimir AI Memory Vault"

[dependencies]
mimir-core = { path = "../mimir-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

# Parallel processing
rayon = "1.8"

# LLM integration for summarization (will be added later)
# llama-cpp-2 = "0.1"

[dev-dependencies]
tokio-test = "0.4" 