[package]
name = "mimir-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and utilities for Mimir AI Memory Vault"

[features]
default = []
test-utils = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
directories.workspace = true
num_cpus.workspace = true
tempfile.workspace = true

# Encryption dependencies
ring = "0.17"
chacha20poly1305.workspace = true
zeroize = { version = "1.6", features = ["derive"] }
hex = "0.4"

# OS keychain support
[target.'cfg(target_os = "macos")'.dependencies]
keyring = "2.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = "2.0"

tempfile = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
proptest.workspace = true
temp-env.workspace = true
criterion.workspace = true

[[bench]]
name = "memory_operations"
harness = false 