[package]
name = "mimir-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Encrypted SQLite database with SQLCipher for Mimir AI Memory Vault"

[dependencies]
mimir-core = { path = "../mimir-core" }

rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Encryption dependencies
ring.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true

# Database specific - SQLCipher support through rusqlite
refinery = { version = "0.8", features = ["rusqlite"] }

[dev-dependencies]
tempfile = "3.0" 