[package]
name = "mimir-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLM integration for Mimir AI Memory Vault using MistralRS"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Path handling
dunce = "1.0"

# Configuration
once_cell = "1.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI utilities
clap = { version = "4.0", features = ["derive"] }

# LLM inference with MistralRS
[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.10"
tracing-subscriber.workspace = true
# Additional dependencies for examples
tracing-chrome = "0.7"
image = "0.25.6"  # For vision examples

[features]
default = []
