[package]
name = "mimir-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Client SDK for Mimir AI Memory Vault"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
wiremock.workspace = true
mockall.workspace = true 