[package]
name = "mimir-tray"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0"  # UI components use AGPL-3.0 as specified
repository.workspace = true
authors.workspace = true
description = "System tray UI for Mimir AI Memory Vault"

[[bin]]
name = "mimir-tray"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
mimir-sdk = { path = "../mimir-sdk" }
mimir-db = { path = "../mimir-db" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

# Tauri for cross-platform UI
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-store = "2.0.0"
tauri-plugin-window-state = "2.0.0"

[dev-dependencies]
tauri = { version = "2.0.0", features = ["test"] } 