[package]
name = "mimir-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance vector similarity search for Mimir AI Memory Vault"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ndarray.workspace = true
uuid.workspace = true

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
proptest.workspace = true
criterion.workspace = true
futures = "0.3"

[[bench]]
name = "vector_operations"
harness = false 