[package]
name = "mimir-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance vector similarity search for Mimir AI Memory Vault"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ndarray.workspace = true
uuid.workspace = true

# Vector similarity search
hnsw_rs = "0.3"

# ONNX Runtime for embedding model
ort = "2.0.0-rc.10"

# Tokenizer for BGE models
tokenizers = "0.15"

# Linear algebra for rotation matrix
nalgebra = "0.32"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "1.0"

# Memory mapping for persistence
memmap2 = "0.9"

# Cryptography for HKDF
ring = "0.17"

# Efficient serialization
bincode = "1.3"

# Better mutex performance
parking_lot = "0.12"

# Concurrent operations
crossbeam = "0.8"

# CPU detection
num_cpus = "1.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
proptest.workspace = true
criterion.workspace = true
futures = "0.3"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "vector_operations"
harness = false 