[package]
name = "mimir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main daemon process for Mimir AI Memory Vault with MCP server"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
mimir-vector = { path = "../mimir-vector" }
mimir-db = { path = "../mimir-db" }
mimir-guardrails = { path = "../mimir-guardrails" }
mimir-compression = { path = "../mimir-compression" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
config.workspace = true
directories.workspace = true

[dev-dependencies]
criterion.workspace = true 