[package]
name = "mimir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main daemon process for Mimir AI Memory Vault"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
tokio-test.workspace = true
axum-test.workspace = true
serial_test.workspace = true
tempfile.workspace = true
futures = "0.3" 