[package]
name = "mimir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main daemon process for Mimir AI Memory Vault"

[[bin]]
name = "mimir"
path = "src/main.rs"

[dependencies]
mimir-core = { path = "../mimir-core" }
mimir-db = { path = "../mimir-db" }
mimir-vector = { path = "../mimir-vector" }
mimir-llm = { path = "../mimir-llm" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-appender = "0.2"
futures-util = "0.3"
clap.workspace = true
anyhow.workspace = true
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "transport-streamable-http-server-session",
    "transport-streamable-http-server",
    "transport-worker",
    "transport-sse-server"
] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mimir-core = { path = "../mimir-core", features = ["test-utils"] }
mimir-db = { path = "../mimir-db" }
mimir-vector = { path = "../mimir-vector" }
tokio-test.workspace = true
axum-test.workspace = true
serial_test.workspace = true
tempfile.workspace = true
futures = "0.3" 
